--- a/sample_robot/Pipfile
+++ b/sample_robot/Pipfile
@@ -4,12 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-PyYAML = "==5.3.1"
-robotframework = "==5.0.1"
-robotframework-seleniumlibrary = "==6.0.0"
-robotframework-screencaplibrary = "==1.6.0"
+PyYAML = ">=5.3.1"
+robotframework = ">=7.0.0"
+robotframework-seleniumlibrary = "*"
 
 [dev-packages]
 
 [requires]
-python_full_version = "3.9.9"
+python_version = "3.12"
